configuring function to render from upload.html instead of string

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,7 +5,7 @@
 </head>
    <body>
    	<center>
-      <form action = "http://localhost:5000/uploader" method = "POST" 
+      <form action = "http://localhost:5000/upload" method = "POST" 
          enctype = "multipart/form-data" style="margin-top:23%;">
          <input type = "file" name = "file"/>
          <input type = "submit"/>
